<resources>
    <string name="app_name">ChatProject</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_greeting">Greeting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello! Feeds coming soon...</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>