<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="31dp"
    android:scrollbars="none"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="23.5dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.2dp"
            android:text="@string/log_in_to_continue"
            android:textColor="@color/black"
            android:textSize="15.6dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="58.5dp"
            android:layout_marginTop="52dp"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:paddingStart="20.8dp"
            android:paddingEnd="20.8dp"
            android:textSize="16.9dp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="58.5dp"
            android:layout_marginTop="20.8dp"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:paddingStart="20.8dp"
            android:paddingEnd="20.8dp"
            android:textSize="16.9dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameField" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="start"
            android:layout_marginTop="26dp"
            android:enabled="true"
            android:text="@string/login"
            android:textSize="16.9dp"
            app:cornerRadius="10.4dp" />

        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="16.9dp"
            android:textStyle="bold"
            />

    </LinearLayout>

<!--    <ProgressBar-->
<!--        android:id="@+id/loading"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="64dp"-->
<!--        android:layout_marginBottom="64dp"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/password"-->
<!--        app:layout_constraintStart_toStartOf="@+id/password"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.3" />-->

</ScrollView>