<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="31dp"
    android:scrollbars="none"
    tools:context=".ui.login.LogUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="23.4dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="58.5dp"
            android:layout_marginTop="26dp"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="20.8dp"
            android:paddingEnd="20.8dp"
            android:textSize="16.9dp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="58.5dp"
            android:layout_marginTop="20.8dp"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:paddingStart="20.8dp"
            android:paddingEnd="20.8dp"
            android:textSize="16.9dp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="58.5dp"
            android:layout_marginTop="20.8dp"
            android:hint="@string/prompt_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:paddingStart="20.8dp"
            android:paddingEnd="20.8dp"
            android:textSize="16.9dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameField"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="58.5dp"
            android:layout_marginTop="20.8dp"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="20.8dp"
            android:paddingEnd="20.8dp"
            android:textSize="16.9dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20.8dp"
            android:text="@string/sign_up"
            android:textSize="16.9dp"
            android:textStyle="bold"
            app:cornerRadius="10.4dp"/>
        
        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="16.9dp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>